@startuml
'https://plantuml.com/class-diagram
class Battery{
    - int level = 100
    - BatteryLevelDisplay
    - LowBatteryWarning
    + setDisplay(BatteryLevelDisplay display): void
    + setWarning(LowBatteryWarning warning): void
    + consume(int amount): void
    + getLevel(): int
}

class BatteryLevelDisplay{
    - Battery battery
    + BatteryLevelDisplay(Battery battery): BatteryLevelDisplay
    + update(): void
}

class LowBatteryWarning{
    -{static} LOW_BATTERY: int = 30
    - Battery battery
    + LowBatteryWarning(Battery battery): LowBatteryWarning
    + update(): void
}


Battery "-battery" -- "-display" BatteryLevelDisplay
Battery "-battery" -- "-warning" LowBatteryWarning

@enduml